# DivinityOS

./: .gitignore  LICENSE  README.md  build-image.sh  build-test-image.sh  run-image.sh  run-test.sh
helium/: Cargo.toml  runtest.sh
helium/.cargo/: config.toml
helium/src/: arch.rs  bitmap.rs  console.rs  frame.rs  hhdm.rs  main.rs  pmem.rs
prebuilt/: BOOTIA32.EFI  BOOTX64.EFI  limine-bios.sys  limine.conf
